feat(library): Leave file handling responsibility to LibraryService